# adventofcode2023

./: README.md  ad13inputx.txt  ad7output_20231231.txt
ad1/ad1/: Cargo.toml
ad1/ad1/src/: main.rs
ad10/: Cargo.toml
ad10/src/: main.rs
ad11/: Cargo.toml
ad11/src/: main.rs
ad12/: Cargo.toml
ad12/src/: main.rs  main_pt1.rs  main_save_nocache.rs
ad13/: Cargo.toml
ad13/src/: main.rs  main_pt1.rs
ad2/ad2/: Cargo.toml
ad2/ad2/src/: ad2_main.rs
ad3/ad3/: Cargo.toml
ad3/ad3/src/: main.rs  main_pt1.rs
ad4/: Cargo.toml
ad4/src/: main.rs  main_ad4.rs
ad5/: Cargo.toml
ad5/src/: main.rs
ad6/: Cargo.toml
ad6/src/: main.rs
ad7/: Cargo.toml
ad7/src/: main.rs
ad8/: Cargo.toml
ad8/src/: main.rs  main1.rs
ad9/: Cargo.toml
ad9/src/: main.rs
