[package]
name = "ad1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.4"

[source.crates-io]
replace-with = 'my-registry'

[source.my-registry]
registry = 'https://github.com/rust-lang/crates.io-index'
